@@ -1,3 +1,6 @@
+[B]2.2.6[/B]
+• Minor fixes
+
 [B]2.2.5[/B]
 • Add games sources widget
 • Add support for games artworks (artworks must be named identical to the file name of the game with the extension '.png' and must be in the same folder as games)
